src/index.css
body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    overflow: unset;
    overflow-x: hidden;
    overflow-y: auto;
}

.ReactModal__Content {
    overflow: unset !important;
    overflow-x: hidden !important;
    overflow-y: auto !important;
}

::-webkit-scrollbar {
    width: 12px;
    background-color: #F5F5F5;
}

::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    border-radius: 10px;
    background-color: #F5F5F5;
}

::-webkit-scrollbar-thumb {
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
    background-color: #555;
}

a:-webkit-any-link:focus {
    outline-offset: 0px;
}

:focus {
    outline: -webkit-focus-ring-color auto 0px;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.social-icon {
    filter: grayscale(100);
    transition: all 1s;
}

.social-icon:hover {
    transition: all 1s;
    filter: grayscale(0)
}

